# hackday10-desktop-cms

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-demo.yml
app/: CMakeLists.txt
app/scripts/: pull_resources.py
app/source/: Window.h  main.cpp
